--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -589,10 +589,10 @@ background_opacity: 0.95
   #- { key: Copy,                     action: Copy                             }
   #- { key: L,         mods: Control, action: ClearLogNotice                   }
   #- { key: L,         mods: Control, chars: "\x0c"                            }
-  #- { key: PageUp,    mods: Shift,   action: ScrollPageUp,   mode: ~Alt       }
-  #- { key: PageDown,  mods: Shift,   action: ScrollPageDown, mode: ~Alt       }
-  #- { key: Home,      mods: Shift,   action: ScrollToTop,    mode: ~Alt       }
-  #- { key: End,       mods: Shift,   action: ScrollToBottom, mode: ~Alt       }
+  # - { key: PageUp,    mods: Shift,   action: ScrollPageUp}
+    #  - { key: PageDown,  mods: Shift,   action: ScrollPageDown, mode: ~Alt       }
+    # - { key: Home,      mods: Shift,   action: ScrollToTop,    mode: ~Alt       }
+    # - { key: End,       mods: Shift,   action: ScrollToBottom, mode: ~Alt       }
 
 #debug:
   # Display the time it takes to redraw each frame.
