--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,153 +1,69 @@
 # Variables
-set $start /usr/local/bin/swaystart.sh
 set $mod Mod4
 set $term alacritty
-#set $menu dmenu_path | dmenu -b | xargs swaymsg exec --
-#set $menu bemenu-run -b
-set $menu dmenu_path | wofi --hide-scroll --show drun | xargs swaymsg exec --¬
-set $lock swaylock -e -i /home/scribe/Pictures/wallpaper-bubbles.jpg
+set $menu bemenu-run --bottom --no-overlap --monitor=all --prompt="▶" -i -nb "#3f3f3f" --nf "#dcdccc" | swaymsg exec
 set $screenshot grim /home/scribe/Pictures/screenshots/screenshot-$(date +"%d-%m-%Y-%H-%M-%S").png
 set $screenclip slurp | grim -g - /home/scribe/Pictures/screenshots/screenshot-$(date +"%d-%m-%Y-%H-%M-%S").png
-set $wallpaper /home/scribe/Pictures/scifi-wallpaper.jpg
-set $sleep loginctl suspend
-set $qutebrowser flatpak run org.qutebrowser.qutebrowser &
+set $lockscreen /home/scribe/Pictures/lockscreen.jpg
+set $wallpaper /home/scribe/Pictures/wallpaper.jpg
 
-# Font
-font pango:Sans 12
+#set $start /usr/local/bin/swaystart.sh
+#set $sleep loginctl suspend
+#set $qutebrowser flatpak run org.qutebrowser.qutebrowser &
 
-# Setting colors
-set $cl_high #380000
-set $cl_indi #d9d8d8
-set $cl_back #231f20
-set $cl_ligh #431616
-set $cl_fore #d9d8d8
-set $cl_urge #ee2e24
-set $cl_brdr #890000
-
-# Colors                border   bg       text     indi     childborder
-client.focused          $cl_high $cl_high $cl_fore $cl_indi $cl_high
-client.focused_inactive $cl_back $cl_ligh $cl_fore $cl_back $cl_back
-client.unfocused        $cl_brdr $cl_back $cl_fore $cl_back $cl_back
-client.urgent           $cl_urge $cl_urge $cl_fore $cl_urge $cl_urge
-
-
-# Window border
-default_border pixel 1
-default_floating_border normal
-hide_edge_borders smart
-
-smart_gaps on
-gaps inner 10
-
-
-### Workspaces
-
-# set visual workspace names/icons
-set $workspace1 "1"
-set $workspace2 "2"
-set $workspace3 "3"
-set $workspace4 "4"
-set $workspace5 "5"
-set $workspace6 "6"
-set $workspace7 "7"
-set $workspace8 "8"
-set $workspace9 "9"
-set $workspace10 "10"
-
-# Set default workspaces for certain applications
-#for_window [class="Spotify"] move container to workspace $workspace10
-#assign [class="Firefox"] $workspace2
-
-
-### Output
-
-#output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+# wallpaper for all screens
 output * bg $wallpaper fill
 
-#output eDP-1 pos 0 0
-#output DP-1 pos 1600 -900
+# Font
+font pango:Noto 12
 
-#workspace 1 output eDP-1
-#workspace 2 output eDP-1
+# Autostart
+
+# start dbus user session for notify daemon
+exec dbus-daemon --session --fork --address=unix:path=$XDG_RUNTIME_DIR/bus
 
 
-### Input
+bindsym $mod++m exec $term --class alsamixer -e 'alsamixer' --device hw:PCH
 
-# You can get the names of your inputs by running: swaymsg -t get_inputs
-# Read `man 5 sway-input` for more information about this section.
 
-input "1130:269:HID_046a:010d" {
-    xkb_layout de
-    xkb_variant nodeadkeys
-    xkb_options caps:escape
-}
-
-# laptop keyboard
-input "1:1:AT_Translated_Set_2_keyboard" {
-    xkb_layout de
-    xkb_variant nodeadkeys
-    xkb_options caps:escape
-}
-
-# Touchpad
-input "1739:0:Synaptics_TM2722-001" {
-    dwt enabled
-    tap enabled
-    natural_scroll enabled
-    middle_emulation enabled
-}
 
 ### Key bindings
 
-bindsym $mod+p exec $qutebrowser
+#bindsym $mod+p exec $qutebrowser
 #bindsym $mod+k exec $sleep
 #bindsym $mod+t exec $start
-#bindsym $mod+l exec $lock
+
 bindsym $mod+Print exec $screenshot
 bindsym $mod+Shift+Print exec $screenclip
+
 bindsym $mod+Return exec $term
 bindsym $mod+Shift+q kill
 bindsym $mod+d exec $menu
-bindsym $mod+Shift+c reload
+
+bindsym $mod+Shift+Return exec caja
+
+bindsym $mod+w exec virt-manager
+
+bindsym $mod+F1 exec vivaldi-snapshot
+bindsym $mod+F2 exec firefox-bin-wayland
+
+
+bindsym $mod+F5 reload
+
+bindsym $mod+F12 exec swaylock -f -e -i $lockscreen
+
 
 
 ## Media Keys
 
-# Screen brightness controls
-bindsym XF86MonBrightnessUp exec light -A 20 # increase screen brightness
-bindsym XF86MonBrightnessDown exec light -U 20 # decrease screen brightness
-
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec pactl set-sink-volume 0 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec pactl set-sink-volume 0 -5% #decrease sound volume
-bindsym XF86AudioMute exec pactl set-sink-mute 0 toggle # mute sound
+bindsym XF86AudioRaiseVolume exec bash -c 'pactl set-sink-volume 0 +5% ; audio-notification.sh'  #increase sound volume
+bindsym XF86AudioLowerVolume exec bash -c 'pactl set-sink-volume 0 -5% ; audio-notification.sh' #decrease sound volume
+bindsym XF86AudioMute exec bash -c 'pactl set-sink-mute 0 toggle ; audio-notification.sh' # mute sound
 
-
-## workspaces
-
-# Switch to workspace
-bindsym $mod+1 workspace $workspace1
-bindsym $mod+2 workspace $workspace2
-bindsym $mod+3 workspace $workspace3
-bindsym $mod+4 workspace $workspace4
-bindsym $mod+5 workspace $workspace5
-bindsym $mod+6 workspace $workspace6
-bindsym $mod+7 workspace $workspace7
-bindsym $mod+8 workspace $workspace8
-bindsym $mod+9 workspace $workspace9
-bindsym $mod+0 workspace $workspace10
-
-# Move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace $workspace1
-bindsym $mod+Shift+2 move container to workspace $workspace2
-bindsym $mod+Shift+3 move container to workspace $workspace3
-bindsym $mod+Shift+4 move container to workspace $workspace4
-bindsym $mod+Shift+5 move container to workspace $workspace5
-bindsym $mod+Shift+6 move container to workspace $workspace6
-bindsym $mod+Shift+7 move container to workspace $workspace7
-bindsym $mod+Shift+8 move container to workspace $workspace8
-bindsym $mod+Shift+9 move container to workspace $workspace9
-bindsym $mod+Shift+0 move container to workspace $workspace10
+# Notifications
+bindsym Control+Space exec makoctl dismiss
+bindsym Control+Shift+Space exec makoctl dismiss --all
 
 
 ## Move around
@@ -218,8 +134,8 @@ bindsym $mod+e mode "$mode_system"
 ### Layout stuff:
 
 # Split mode
-bindsym $mod+b splith
-bindsym $mod+v splitv
+bindsym $mod+b splith ; exec notify-send -t 1500 "horizontal tiling"
+bindsym $mod+v splitv ; exec notify-send -t 1500 "vertical tiling"
 
 ## Switch the current container between different layout styles
 #bindsym $mod+s layout stacking
@@ -239,25 +155,6 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
 
-### Idle configuration
-
-exec swayidle -w \
-    timeout 300 'swaylock -e -i /home/scribe/Pictures/wallpaper-bubbles.jpg' \
-    timeout 600 'swaymsg "output * dpms off"' \
-    resume 'swaymsg "output * dpms on"' \
-    before-sleep 'swaylock -e -i /home/scribe/Pictures/wallpaper-bubbles.jpg'
-
-# This will lock your screen after 300 seconds of inactivity, then turn off
-# your displays after another 300 seconds, and turn your screens back on when
-# resumed. It will also lock your screen before your computer goes to sleep.
-
-# dont lock while any application is in fullscreen
-for_window [class="^.*"] inhibit_idle fullscreen
-for_window [app_id="^.*"] inhibit_idle fullscreen
-
-
-
-
 
 ### Status Bar
 
@@ -267,4 +164,6 @@ bar {
     swaybar_command waybar
 }
 
+include ~/.config/sway/conf.d/*
 include /etc/sway/config.d/*
+include ~/.config/sway/`hostname`/*
