--- a/.tmux.conf
+++ b/.tmux.conf
@@ -78,7 +78,7 @@ set -g pane-active-border-style fg=$BLUE
 
 # ----- Left Side -----#
 set-option -g status-left "\
-#[fg=$LIGHT_GRAY, bg=colour241]#{?client_prefix,#[bg=colour167],} 🤍 #S \
+#[fg=$LIGHT_GRAY, bg=colour241]#{?client_prefix,#[bg=colour167],}  #S \
 #[fg=colour241, bg=colour237]#{?client_prefix,#[fg=colour167],}#{?window_zoomed_flag, 🔍,}"
 
 # ----- Windows   -----#
