--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -3,7 +3,7 @@
     "height" : 28,
     "modules-left": ["sway/workspaces", "sway/mode"],
     "modules-center": ["clock"],
-    "modules-right": ["idle_inhibitor", "pulseaudio", "temperature", "cpu", "memory", "network",
+    "modules-right": ["idle_inhibitor", "pulseaudio", "temperature", "cpu", "memory", "backlight", "network",
     "battery","tray"],
     "sway/window": {
         "max-length": 50
@@ -34,17 +34,17 @@
     },
     "backlight": {
         // "device": "acpi_video1",
-        "format": "{percent}% {icon}",
-        "format-icons": ["", ""]
+        "format": "{icon} {percent}%",
+        "format-icons": ["", ""] 
     },
     "network": {
        // "interface": "wlp2s0", // (Optional) To force the use of this interface
+	"interval": 5,
         "format-wifi": " {essid} ({signalStrength}%)",
         "format-ethernet": "  {ifname}: {ipaddr}", 
         "format-disconnected": "Disconnected ⚠",
-        "tooltip": false,
-	"interval": 1 
-    },
+	"tooltip-format": "{ifname}: {ipaddr}"
+	},
     "pulseaudio": {
         // "scroll-step": 2, // %, can be a float
         "format": "{icon} {volume}%",
@@ -78,7 +78,7 @@
 	    "format": "{usage:2}%"
     },
     "clock": {
-        "format": "{:%a %d %b %H:%M %p}",
+        "format": "{:%a %d %b %H:%M}",
         "tooltip": false,
 	"on-click": "alacritty --class calcurse -e 'calcurse'",
     },
