--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,6 +10,7 @@ setw -g monitor-activity on
 setw -g automatic-rename off
 set-option -g set-titles on
 
+set-window-option -g xterm-keys on
 
 # Setting the prefix from C-b to C-a
 unbind C-b
@@ -40,11 +41,11 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
-# Use Alt-arrow keys without prefix key to switch panes
-bind -n C-Left select-pane -L
-bind -n C-Right select-pane -R
-bind -n C-Up select-pane -U
-bind -n C-Down select-pane -D
+# Use Ctrl-arrow keys without prefix key to switch panes
+#bind -n C-Left select-pane -L
+#bind -n C-Right select-pane -R
+#bind -n C-Up select-pane -U
+#bind -n C-Down select-pane -D
 
 # Shift arrow to switch windows
 bind -n S-Left  previous-window
