--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -265,12 +265,12 @@ font_size 11.0
 
 #: Terminal bell {{{
 
-# enable_audio_bell yes
+enable_audio_bell no 
 
 #: Enable/disable the audio bell. Useful in environments that require
 #: silence.
 
-# visual_bell_duration 0.0
+# visual_bell_duration 0.5
 
 #: Visual bell duration. Flash the screen when a bell occurs for the
 #: specified number of seconds. Set to zero to disable.
@@ -790,7 +790,7 @@ dynamic_background_opacity yes
 
 #:     map ctrl+f>2 set_font_size 20
 
-# kitty_mod ctrl+shift
+kitty_mod ctrl+shift
 
 #: The value of kitty_mod is used as the modifier for all default
 #: shortcuts, you can change it in your kitty.conf to change the
@@ -840,15 +840,15 @@ dynamic_background_opacity yes
 
 #: Scrolling {{{
 
-# map kitty_mod+up        scroll_line_up
-# map kitty_mod+k         scroll_line_up
-# map kitty_mod+down      scroll_line_down
-# map kitty_mod+j         scroll_line_down
-# map kitty_mod+page_up   scroll_page_up
-# map kitty_mod+page_down scroll_page_down
-# map kitty_mod+home      scroll_home
-# map kitty_mod+end       scroll_end
-# map kitty_mod+h         show_scrollback
+map kitty_mod+up        scroll_line_up
+map kitty_mod+k         scroll_line_up
+map kitty_mod+down      scroll_line_down
+map kitty_mod+j         scroll_line_down
+map kitty_mod+page_up   scroll_page_up
+map kitty_mod+page_down scroll_page_down
+map kitty_mod+home      scroll_home
+map kitty_mod+end       scroll_end
+map kitty_mod+h         show_scrollback
 
 #: You can pipe the contents of the current screen + history buffer as
 #: STDIN to an arbitrary program using the ``launch`` function. For
