new kitty theme

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
 # vim:fileencoding=utf-8:ft=conf:foldmethod=marker
 
-#include theme.conf
+include theme.conf
 
 #: Fonts {{{
 
@@ -476,7 +476,7 @@ enable_audio_bell no
 #: Color scheme {{{
 
 #foreground #dddddd
-#background #101010
+#background #d8d8d8
 
 #: The foreground and background colors
 
